examples/test/testpolicy13751.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13751
  namespace: namespace42
spec:
  podSelector:
    matchLabels:
      key34: value16
      key47: value10
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key23: value17
      podSelector:
        matchLabels:
          key16: value41
          key46: value45
